--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -32,3 +32,4 @@ google-cloud-secret-manager = "==2.12.3"
 google-auth = "==2.10.0"
 google-cloud-storage = "==2.5.0"
 pipenv = "*"
+cb-django-articles = {editable = true, path = "./modules/django_articles"}
